# music_ml

./: .gitignore  Procfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
docs/: backend_architecture.md  environment_configuration.md  frontend_architecture.md
instance/: dev.db
music_ml/: app.py
music_ml/api/: auth.py  generate_playlist.py  search.py  test_auth.py  test_generate_playlist.py  test_search.py
music_ml/frontend/: package-lock.json  package.json
music_ml/frontend/src/: App.css  App.js
music_ml/frontend/src/components/: PlaylistSection.js  SearchBar.js  SearchSection.js  SelectedSong.js  SongList.js  SpotifyCallback.js
music_ml/instance/: dev.db
music_ml/matchers/: artist_matcher.py  matcher.py  test_artist_matcher.py
music_ml/models/: artist.py  playlist.py  track.py
music_ml/protobuf/common/: track.proto  track_pb2.py
music_ml/services/: spotify_service.py  test_spotify_service.py
music_ml/services/search/: search_server.py  test_search_server.py
music_ml/services/track_info/: test_track_info_server.py  track_info_server.py
music_ml/services/track_search/: test_track_search_server.py  track_search_server.py
music_ml/utils/: spotify_utils.py  test_spotify_utils.py
web_frontend/: .gitignore  package-lock.json  package.json  server.js  static.json
web_frontend/src/: App.css  App.js
web_frontend/src/components/: Header.js  SelectedSong.js  SpotifyCallback.js  SpotifyLoginButton.js
web_frontend/src/services/: authService.js  generatePlaylist.js  searchService.js
(+12 files in other folders)
