[tool.poetry]
name = "music-ml"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
protobuf = "^5.28.2"
grpcio-tools = "^1.66.1"
grpcio = "^1.66.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-dotenv = "^0.5.2"
grpcio-testing = "^1.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
